# sam

./: .gitignore  LICENSE  README.md  pyproject.toml  requirements.txt
.github/workflows/: github-actions-main.yml
sam/: manage.py
sam/manager/: actions.py  admin.py  files.py  models.py  tests.py  urls.py  views.py
sam/manager/migrations/: 0001_initial.py  0002_alter_entity_name_and_more.py  0003_alter_entity_options_document_footprint_and_more.py  0004_alter_entity_options_entity_color_and_more.py  0005_language_alter_entity_options_document_size_and_more.py  0006_document_mime_type_alter_document_stored_id.py
sam/manager/templates/: action.html  base.html
sam/manager/templates/entity/: detail.html  index.html
sam/manager/templates/manager/: entity_detail.html  entity_list.html  project_detail.html
sam/manager/templates/project/: detail.html
sam/manager/templatetags/: action.py
sam/sam/: asgi.py  settings.py  urls.py  wsgi.py
