[tool.poetry]
name = "sam"
version = "0.1.0"
description = "Translation project manager"
authors = ["Yuri Vital <vital.systm@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
Django = "^4.1.3"
django-bootstrap5 = "^22.1"
django-colorfield = "^0.7.2"
pytesseract = "^0.3.10"
filemagic = "^1.6"
whisper = {git = "https://github.com/openai/whisper.git"}
torch = "^1.13.0"
tqdm = "^4.64.1"
numpy = "^1.23.5"
transformers = "^4.25.1"
ffmpeg-python = "^0.2.0"

[tool.poetry.group.dev.dependencies]
black = "^22.10.0"

[tool.black]
line-length = 120

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
