[tool.poetry]
name = "sam"
version = "0.1.0"
description = "Translation project manager"
authors = ["Yuri Vital <vital.systm@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
Django = "^4.1.6"
django-bootstrap5 = "^22.1"
django-colorfield = "^0.7.2"
pytesseract = "^0.3.10"
filemagic = "^1.6"

[tool.poetry.group.dev.dependencies]
black = "^22.10.0"

[tool.black]
line-length = 120

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
